pietc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file_inputs
Rule 1     file_inputs -> file_input
Rule 2     file_inputs -> file_input file_inputs
Rule 3     file_input -> stmt
Rule 4     file_input -> NEWLINE
Rule 5     stmt -> simple_stmt
Rule 6     stmt -> compound_stmt
Rule 7     simple_stmt -> atom_chain_stmt NEWLINE
Rule 8     compound_stmt -> if_stmt
Rule 9     compound_stmt -> while_stmt
Rule 10    atom_chain_stmt -> atom_stmt
Rule 11    atom_chain_stmt -> atom_stmt ;
Rule 12    atom_chain_stmt -> atom_stmt ; atom_chain_stmt
Rule 13    atom_stmt -> expr_stmt
Rule 14    atom_stmt -> print_stmt
Rule 15    atom_stmt -> scan_stmt
Rule 16    atom_stmt -> flow_stmt
Rule 17    expr_stmt -> assign_expr
Rule 18    expr_stmt -> value_expr
Rule 19    print_stmt -> PRINT CHAR NAME
Rule 20    print_stmt -> PRINT CHAR INTEGER
Rule 21    print_stmt -> PRINT CHAR STRING
Rule 22    print_stmt -> PRINT INT NAME
Rule 23    print_stmt -> PRINT INT INTEGER
Rule 24    print_stmt -> PRINT INT STRING
Rule 25    scan_stmt -> SCAN CHAR NAME
Rule 26    scan_stmt -> SCAN INT NAME
Rule 27    flow_stmt -> BREAK
Rule 28    flow_stmt -> CONTINUE
Rule 29    if_stmt -> IF value_expr : block
Rule 30    if_stmt -> IF value_expr : block ELSE : block
Rule 31    if_stmt -> IF value_expr : block elif_chain_stmt
Rule 32    if_stmt -> IF value_expr : block elif_chain_stmt ELSE : block
Rule 33    elif_chain_stmt -> ELIF value_expr : block
Rule 34    elif_chain_stmt -> ELIF value_expr : block elif_chain_stmt
Rule 35    while_stmt -> WHILE value_expr : block
Rule 36    block -> simple_stmt
Rule 37    block -> NEWLINE INDENT stmt_chain_stmt DEDENT
Rule 38    stmt_chain_stmt -> stmt
Rule 39    stmt_chain_stmt -> stmt stmt_chain_stmt
Rule 40    assign_expr -> NAME = value_expr
Rule 41    assign_expr -> NAME = STRING
Rule 42    value_expr -> atom_expr
Rule 43    value_expr -> atom_expr compare_op value_expr
Rule 44    compare_op -> <
Rule 45    compare_op -> >
Rule 46    compare_op -> LESSEROREQUAL
Rule 47    compare_op -> GREATEROREQUAL
Rule 48    compare_op -> EQUALS
Rule 49    compare_op -> NOTEQUALS
Rule 50    atom_expr -> term
Rule 51    atom_expr -> term + atom_expr
Rule 52    atom_expr -> term - atom_expr
Rule 53    term -> factor
Rule 54    term -> factor * term
Rule 55    term -> factor / term
Rule 56    term -> factor % term
Rule 57    factor -> atom
Rule 58    factor -> ( atom_expr )
Rule 59    atom -> INTEGER
Rule 60    atom -> NAME
Rule 61    atom -> TRUE
Rule 62    atom -> FALSE

Terminals, with rules where they appear

%                    : 56
(                    : 58
)                    : 58
*                    : 54
+                    : 51
-                    : 52
/                    : 55
:                    : 29 30 30 31 32 32 33 34 35
;                    : 11 12
<                    : 44
=                    : 40 41
>                    : 45
BREAK                : 27
CHAR                 : 19 20 21 25
CONTINUE             : 28
DEDENT               : 37
ELIF                 : 33 34
ELSE                 : 30 32
EQUALS               : 48
FALSE                : 62
GREATEROREQUAL       : 47
IF                   : 29 30 31 32
INDENT               : 37
INT                  : 22 23 24 26
INTEGER              : 20 23 59
LESSEROREQUAL        : 46
NAME                 : 19 22 25 26 40 41 60
NEWLINE              : 4 7 37
NOTEQUALS            : 49
PRINT                : 19 20 21 22 23 24
SCAN                 : 25 26
STRING               : 21 24 41
TRUE                 : 61
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

assign_expr          : 17
atom                 : 57
atom_chain_stmt      : 7 12
atom_expr            : 42 43 51 52 58
atom_stmt            : 10 11 12
block                : 29 30 30 31 32 32 33 34 35
compare_op           : 43
compound_stmt        : 6
elif_chain_stmt      : 31 32 34
expr_stmt            : 13
factor               : 53 54 55 56
file_input           : 1 2
file_inputs          : 2 0
flow_stmt            : 16
if_stmt              : 8
print_stmt           : 14
scan_stmt            : 15
simple_stmt          : 5 36
stmt                 : 3 38 39
stmt_chain_stmt      : 37 39
term                 : 50 51 52 54 55 56
value_expr           : 18 29 30 31 32 33 34 35 40 43
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . file_inputs
    (1) file_inputs -> . file_input
    (2) file_inputs -> . file_input file_inputs
    (3) file_input -> . stmt
    (4) file_input -> . NEWLINE
    (5) stmt -> . simple_stmt
    (6) stmt -> . compound_stmt
    (7) simple_stmt -> . atom_chain_stmt NEWLINE
    (8) compound_stmt -> . if_stmt
    (9) compound_stmt -> . while_stmt
    (10) atom_chain_stmt -> . atom_stmt
    (11) atom_chain_stmt -> . atom_stmt ;
    (12) atom_chain_stmt -> . atom_stmt ; atom_chain_stmt
    (29) if_stmt -> . IF value_expr : block
    (30) if_stmt -> . IF value_expr : block ELSE : block
    (31) if_stmt -> . IF value_expr : block elif_chain_stmt
    (32) if_stmt -> . IF value_expr : block elif_chain_stmt ELSE : block
    (35) while_stmt -> . WHILE value_expr : block
    (13) atom_stmt -> . expr_stmt
    (14) atom_stmt -> . print_stmt
    (15) atom_stmt -> . scan_stmt
    (16) atom_stmt -> . flow_stmt
    (17) expr_stmt -> . assign_expr
    (18) expr_stmt -> . value_expr
    (19) print_stmt -> . PRINT CHAR NAME
    (20) print_stmt -> . PRINT CHAR INTEGER
    (21) print_stmt -> . PRINT CHAR STRING
    (22) print_stmt -> . PRINT INT NAME
    (23) print_stmt -> . PRINT INT INTEGER
    (24) print_stmt -> . PRINT INT STRING
    (25) scan_stmt -> . SCAN CHAR NAME
    (26) scan_stmt -> . SCAN INT NAME
    (27) flow_stmt -> . BREAK
    (28) flow_stmt -> . CONTINUE
    (40) assign_expr -> . NAME = value_expr
    (41) assign_expr -> . NAME = STRING
    (42) value_expr -> . atom_expr
    (43) value_expr -> . atom_expr compare_op value_expr
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE

    NEWLINE         shift and go to state 4
    IF              shift and go to state 11
    WHILE           shift and go to state 13
    PRINT           shift and go to state 19
    SCAN            shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    NAME            shift and go to state 20
    (               shift and go to state 29
    INTEGER         shift and go to state 21
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    file_inputs                    shift and go to state 1
    file_input                     shift and go to state 2
    stmt                           shift and go to state 3
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    atom_chain_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    atom_stmt                      shift and go to state 10
    value_expr                     shift and go to state 12
    expr_stmt                      shift and go to state 14
    print_stmt                     shift and go to state 15
    scan_stmt                      shift and go to state 16
    flow_stmt                      shift and go to state 17
    assign_expr                    shift and go to state 18
    atom_expr                      shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27
    atom                           shift and go to state 28

state 1

    (0) S' -> file_inputs .



state 2

    (1) file_inputs -> file_input .
    (2) file_inputs -> file_input . file_inputs
    (1) file_inputs -> . file_input
    (2) file_inputs -> . file_input file_inputs
    (3) file_input -> . stmt
    (4) file_input -> . NEWLINE
    (5) stmt -> . simple_stmt
    (6) stmt -> . compound_stmt
    (7) simple_stmt -> . atom_chain_stmt NEWLINE
    (8) compound_stmt -> . if_stmt
    (9) compound_stmt -> . while_stmt
    (10) atom_chain_stmt -> . atom_stmt
    (11) atom_chain_stmt -> . atom_stmt ;
    (12) atom_chain_stmt -> . atom_stmt ; atom_chain_stmt
    (29) if_stmt -> . IF value_expr : block
    (30) if_stmt -> . IF value_expr : block ELSE : block
    (31) if_stmt -> . IF value_expr : block elif_chain_stmt
    (32) if_stmt -> . IF value_expr : block elif_chain_stmt ELSE : block
    (35) while_stmt -> . WHILE value_expr : block
    (13) atom_stmt -> . expr_stmt
    (14) atom_stmt -> . print_stmt
    (15) atom_stmt -> . scan_stmt
    (16) atom_stmt -> . flow_stmt
    (17) expr_stmt -> . assign_expr
    (18) expr_stmt -> . value_expr
    (19) print_stmt -> . PRINT CHAR NAME
    (20) print_stmt -> . PRINT CHAR INTEGER
    (21) print_stmt -> . PRINT CHAR STRING
    (22) print_stmt -> . PRINT INT NAME
    (23) print_stmt -> . PRINT INT INTEGER
    (24) print_stmt -> . PRINT INT STRING
    (25) scan_stmt -> . SCAN CHAR NAME
    (26) scan_stmt -> . SCAN INT NAME
    (27) flow_stmt -> . BREAK
    (28) flow_stmt -> . CONTINUE
    (40) assign_expr -> . NAME = value_expr
    (41) assign_expr -> . NAME = STRING
    (42) value_expr -> . atom_expr
    (43) value_expr -> . atom_expr compare_op value_expr
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE

    $end            reduce using rule 1 (file_inputs -> file_input .)
    NEWLINE         shift and go to state 4
    IF              shift and go to state 11
    WHILE           shift and go to state 13
    PRINT           shift and go to state 19
    SCAN            shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    NAME            shift and go to state 20
    (               shift and go to state 29
    INTEGER         shift and go to state 21
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    file_input                     shift and go to state 2
    file_inputs                    shift and go to state 32
    stmt                           shift and go to state 3
    simple_stmt                    shift and go to state 5
    compound_stmt                  shift and go to state 6
    atom_chain_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    atom_stmt                      shift and go to state 10
    value_expr                     shift and go to state 12
    expr_stmt                      shift and go to state 14
    print_stmt                     shift and go to state 15
    scan_stmt                      shift and go to state 16
    flow_stmt                      shift and go to state 17
    assign_expr                    shift and go to state 18
    atom_expr                      shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27
    atom                           shift and go to state 28

state 3

    (3) file_input -> stmt .

    NEWLINE         reduce using rule 3 (file_input -> stmt .)
    IF              reduce using rule 3 (file_input -> stmt .)
    WHILE           reduce using rule 3 (file_input -> stmt .)
    PRINT           reduce using rule 3 (file_input -> stmt .)
    SCAN            reduce using rule 3 (file_input -> stmt .)
    BREAK           reduce using rule 3 (file_input -> stmt .)
    CONTINUE        reduce using rule 3 (file_input -> stmt .)
    NAME            reduce using rule 3 (file_input -> stmt .)
    (               reduce using rule 3 (file_input -> stmt .)
    INTEGER         reduce using rule 3 (file_input -> stmt .)
    TRUE            reduce using rule 3 (file_input -> stmt .)
    FALSE           reduce using rule 3 (file_input -> stmt .)
    $end            reduce using rule 3 (file_input -> stmt .)


state 4

    (4) file_input -> NEWLINE .

    NEWLINE         reduce using rule 4 (file_input -> NEWLINE .)
    IF              reduce using rule 4 (file_input -> NEWLINE .)
    WHILE           reduce using rule 4 (file_input -> NEWLINE .)
    PRINT           reduce using rule 4 (file_input -> NEWLINE .)
    SCAN            reduce using rule 4 (file_input -> NEWLINE .)
    BREAK           reduce using rule 4 (file_input -> NEWLINE .)
    CONTINUE        reduce using rule 4 (file_input -> NEWLINE .)
    NAME            reduce using rule 4 (file_input -> NEWLINE .)
    (               reduce using rule 4 (file_input -> NEWLINE .)
    INTEGER         reduce using rule 4 (file_input -> NEWLINE .)
    TRUE            reduce using rule 4 (file_input -> NEWLINE .)
    FALSE           reduce using rule 4 (file_input -> NEWLINE .)
    $end            reduce using rule 4 (file_input -> NEWLINE .)


state 5

    (5) stmt -> simple_stmt .

    NEWLINE         reduce using rule 5 (stmt -> simple_stmt .)
    IF              reduce using rule 5 (stmt -> simple_stmt .)
    WHILE           reduce using rule 5 (stmt -> simple_stmt .)
    PRINT           reduce using rule 5 (stmt -> simple_stmt .)
    SCAN            reduce using rule 5 (stmt -> simple_stmt .)
    BREAK           reduce using rule 5 (stmt -> simple_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> simple_stmt .)
    NAME            reduce using rule 5 (stmt -> simple_stmt .)
    (               reduce using rule 5 (stmt -> simple_stmt .)
    INTEGER         reduce using rule 5 (stmt -> simple_stmt .)
    TRUE            reduce using rule 5 (stmt -> simple_stmt .)
    FALSE           reduce using rule 5 (stmt -> simple_stmt .)
    $end            reduce using rule 5 (stmt -> simple_stmt .)
    DEDENT          reduce using rule 5 (stmt -> simple_stmt .)


state 6

    (6) stmt -> compound_stmt .

    NEWLINE         reduce using rule 6 (stmt -> compound_stmt .)
    IF              reduce using rule 6 (stmt -> compound_stmt .)
    WHILE           reduce using rule 6 (stmt -> compound_stmt .)
    PRINT           reduce using rule 6 (stmt -> compound_stmt .)
    SCAN            reduce using rule 6 (stmt -> compound_stmt .)
    BREAK           reduce using rule 6 (stmt -> compound_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> compound_stmt .)
    NAME            reduce using rule 6 (stmt -> compound_stmt .)
    (               reduce using rule 6 (stmt -> compound_stmt .)
    INTEGER         reduce using rule 6 (stmt -> compound_stmt .)
    TRUE            reduce using rule 6 (stmt -> compound_stmt .)
    FALSE           reduce using rule 6 (stmt -> compound_stmt .)
    $end            reduce using rule 6 (stmt -> compound_stmt .)
    DEDENT          reduce using rule 6 (stmt -> compound_stmt .)


state 7

    (7) simple_stmt -> atom_chain_stmt . NEWLINE

    NEWLINE         shift and go to state 33


state 8

    (8) compound_stmt -> if_stmt .

    NEWLINE         reduce using rule 8 (compound_stmt -> if_stmt .)
    IF              reduce using rule 8 (compound_stmt -> if_stmt .)
    WHILE           reduce using rule 8 (compound_stmt -> if_stmt .)
    PRINT           reduce using rule 8 (compound_stmt -> if_stmt .)
    SCAN            reduce using rule 8 (compound_stmt -> if_stmt .)
    BREAK           reduce using rule 8 (compound_stmt -> if_stmt .)
    CONTINUE        reduce using rule 8 (compound_stmt -> if_stmt .)
    NAME            reduce using rule 8 (compound_stmt -> if_stmt .)
    (               reduce using rule 8 (compound_stmt -> if_stmt .)
    INTEGER         reduce using rule 8 (compound_stmt -> if_stmt .)
    TRUE            reduce using rule 8 (compound_stmt -> if_stmt .)
    FALSE           reduce using rule 8 (compound_stmt -> if_stmt .)
    $end            reduce using rule 8 (compound_stmt -> if_stmt .)
    DEDENT          reduce using rule 8 (compound_stmt -> if_stmt .)


state 9

    (9) compound_stmt -> while_stmt .

    NEWLINE         reduce using rule 9 (compound_stmt -> while_stmt .)
    IF              reduce using rule 9 (compound_stmt -> while_stmt .)
    WHILE           reduce using rule 9 (compound_stmt -> while_stmt .)
    PRINT           reduce using rule 9 (compound_stmt -> while_stmt .)
    SCAN            reduce using rule 9 (compound_stmt -> while_stmt .)
    BREAK           reduce using rule 9 (compound_stmt -> while_stmt .)
    CONTINUE        reduce using rule 9 (compound_stmt -> while_stmt .)
    NAME            reduce using rule 9 (compound_stmt -> while_stmt .)
    (               reduce using rule 9 (compound_stmt -> while_stmt .)
    INTEGER         reduce using rule 9 (compound_stmt -> while_stmt .)
    TRUE            reduce using rule 9 (compound_stmt -> while_stmt .)
    FALSE           reduce using rule 9 (compound_stmt -> while_stmt .)
    $end            reduce using rule 9 (compound_stmt -> while_stmt .)
    DEDENT          reduce using rule 9 (compound_stmt -> while_stmt .)


state 10

    (10) atom_chain_stmt -> atom_stmt .
    (11) atom_chain_stmt -> atom_stmt . ;
    (12) atom_chain_stmt -> atom_stmt . ; atom_chain_stmt

    NEWLINE         reduce using rule 10 (atom_chain_stmt -> atom_stmt .)
    ;               shift and go to state 34


state 11

    (29) if_stmt -> IF . value_expr : block
    (30) if_stmt -> IF . value_expr : block ELSE : block
    (31) if_stmt -> IF . value_expr : block elif_chain_stmt
    (32) if_stmt -> IF . value_expr : block elif_chain_stmt ELSE : block
    (42) value_expr -> . atom_expr
    (43) value_expr -> . atom_expr compare_op value_expr
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE

    (               shift and go to state 29
    INTEGER         shift and go to state 21
    NAME            shift and go to state 36
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    value_expr                     shift and go to state 35
    atom_expr                      shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27
    atom                           shift and go to state 28

state 12

    (18) expr_stmt -> value_expr .

    ;               reduce using rule 18 (expr_stmt -> value_expr .)
    NEWLINE         reduce using rule 18 (expr_stmt -> value_expr .)


state 13

    (35) while_stmt -> WHILE . value_expr : block
    (42) value_expr -> . atom_expr
    (43) value_expr -> . atom_expr compare_op value_expr
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE

    (               shift and go to state 29
    INTEGER         shift and go to state 21
    NAME            shift and go to state 36
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    value_expr                     shift and go to state 37
    atom_expr                      shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27
    atom                           shift and go to state 28

state 14

    (13) atom_stmt -> expr_stmt .

    ;               reduce using rule 13 (atom_stmt -> expr_stmt .)
    NEWLINE         reduce using rule 13 (atom_stmt -> expr_stmt .)


state 15

    (14) atom_stmt -> print_stmt .

    ;               reduce using rule 14 (atom_stmt -> print_stmt .)
    NEWLINE         reduce using rule 14 (atom_stmt -> print_stmt .)


state 16

    (15) atom_stmt -> scan_stmt .

    ;               reduce using rule 15 (atom_stmt -> scan_stmt .)
    NEWLINE         reduce using rule 15 (atom_stmt -> scan_stmt .)


state 17

    (16) atom_stmt -> flow_stmt .

    ;               reduce using rule 16 (atom_stmt -> flow_stmt .)
    NEWLINE         reduce using rule 16 (atom_stmt -> flow_stmt .)


state 18

    (17) expr_stmt -> assign_expr .

    ;               reduce using rule 17 (expr_stmt -> assign_expr .)
    NEWLINE         reduce using rule 17 (expr_stmt -> assign_expr .)


state 19

    (19) print_stmt -> PRINT . CHAR NAME
    (20) print_stmt -> PRINT . CHAR INTEGER
    (21) print_stmt -> PRINT . CHAR STRING
    (22) print_stmt -> PRINT . INT NAME
    (23) print_stmt -> PRINT . INT INTEGER
    (24) print_stmt -> PRINT . INT STRING

    CHAR            shift and go to state 38
    INT             shift and go to state 39


state 20

    (40) assign_expr -> NAME . = value_expr
    (41) assign_expr -> NAME . = STRING
    (60) atom -> NAME .

    =               shift and go to state 40
    *               reduce using rule 60 (atom -> NAME .)
    /               reduce using rule 60 (atom -> NAME .)
    %               reduce using rule 60 (atom -> NAME .)
    +               reduce using rule 60 (atom -> NAME .)
    -               reduce using rule 60 (atom -> NAME .)
    <               reduce using rule 60 (atom -> NAME .)
    >               reduce using rule 60 (atom -> NAME .)
    LESSEROREQUAL   reduce using rule 60 (atom -> NAME .)
    GREATEROREQUAL  reduce using rule 60 (atom -> NAME .)
    EQUALS          reduce using rule 60 (atom -> NAME .)
    NOTEQUALS       reduce using rule 60 (atom -> NAME .)
    ;               reduce using rule 60 (atom -> NAME .)
    NEWLINE         reduce using rule 60 (atom -> NAME .)


state 21

    (59) atom -> INTEGER .

    *               reduce using rule 59 (atom -> INTEGER .)
    /               reduce using rule 59 (atom -> INTEGER .)
    %               reduce using rule 59 (atom -> INTEGER .)
    +               reduce using rule 59 (atom -> INTEGER .)
    -               reduce using rule 59 (atom -> INTEGER .)
    <               reduce using rule 59 (atom -> INTEGER .)
    >               reduce using rule 59 (atom -> INTEGER .)
    LESSEROREQUAL   reduce using rule 59 (atom -> INTEGER .)
    GREATEROREQUAL  reduce using rule 59 (atom -> INTEGER .)
    EQUALS          reduce using rule 59 (atom -> INTEGER .)
    NOTEQUALS       reduce using rule 59 (atom -> INTEGER .)
    ;               reduce using rule 59 (atom -> INTEGER .)
    NEWLINE         reduce using rule 59 (atom -> INTEGER .)
    :               reduce using rule 59 (atom -> INTEGER .)
    )               reduce using rule 59 (atom -> INTEGER .)


state 22

    (25) scan_stmt -> SCAN . CHAR NAME
    (26) scan_stmt -> SCAN . INT NAME

    CHAR            shift and go to state 41
    INT             shift and go to state 42


state 23

    (27) flow_stmt -> BREAK .

    ;               reduce using rule 27 (flow_stmt -> BREAK .)
    NEWLINE         reduce using rule 27 (flow_stmt -> BREAK .)


state 24

    (28) flow_stmt -> CONTINUE .

    ;               reduce using rule 28 (flow_stmt -> CONTINUE .)
    NEWLINE         reduce using rule 28 (flow_stmt -> CONTINUE .)


state 25

    (42) value_expr -> atom_expr .
    (43) value_expr -> atom_expr . compare_op value_expr
    (44) compare_op -> . <
    (45) compare_op -> . >
    (46) compare_op -> . LESSEROREQUAL
    (47) compare_op -> . GREATEROREQUAL
    (48) compare_op -> . EQUALS
    (49) compare_op -> . NOTEQUALS

    ;               reduce using rule 42 (value_expr -> atom_expr .)
    NEWLINE         reduce using rule 42 (value_expr -> atom_expr .)
    :               reduce using rule 42 (value_expr -> atom_expr .)
    <               shift and go to state 44
    >               shift and go to state 45
    LESSEROREQUAL   shift and go to state 46
    GREATEROREQUAL  shift and go to state 47
    EQUALS          shift and go to state 48
    NOTEQUALS       shift and go to state 49

    compare_op                     shift and go to state 43

state 26

    (50) atom_expr -> term .
    (51) atom_expr -> term . + atom_expr
    (52) atom_expr -> term . - atom_expr

    <               reduce using rule 50 (atom_expr -> term .)
    >               reduce using rule 50 (atom_expr -> term .)
    LESSEROREQUAL   reduce using rule 50 (atom_expr -> term .)
    GREATEROREQUAL  reduce using rule 50 (atom_expr -> term .)
    EQUALS          reduce using rule 50 (atom_expr -> term .)
    NOTEQUALS       reduce using rule 50 (atom_expr -> term .)
    ;               reduce using rule 50 (atom_expr -> term .)
    NEWLINE         reduce using rule 50 (atom_expr -> term .)
    :               reduce using rule 50 (atom_expr -> term .)
    )               reduce using rule 50 (atom_expr -> term .)
    +               shift and go to state 50
    -               shift and go to state 51


state 27

    (53) term -> factor .
    (54) term -> factor . * term
    (55) term -> factor . / term
    (56) term -> factor . % term

    +               reduce using rule 53 (term -> factor .)
    -               reduce using rule 53 (term -> factor .)
    <               reduce using rule 53 (term -> factor .)
    >               reduce using rule 53 (term -> factor .)
    LESSEROREQUAL   reduce using rule 53 (term -> factor .)
    GREATEROREQUAL  reduce using rule 53 (term -> factor .)
    EQUALS          reduce using rule 53 (term -> factor .)
    NOTEQUALS       reduce using rule 53 (term -> factor .)
    ;               reduce using rule 53 (term -> factor .)
    NEWLINE         reduce using rule 53 (term -> factor .)
    :               reduce using rule 53 (term -> factor .)
    )               reduce using rule 53 (term -> factor .)
    *               shift and go to state 52
    /               shift and go to state 53
    %               shift and go to state 54


state 28

    (57) factor -> atom .

    *               reduce using rule 57 (factor -> atom .)
    /               reduce using rule 57 (factor -> atom .)
    %               reduce using rule 57 (factor -> atom .)
    +               reduce using rule 57 (factor -> atom .)
    -               reduce using rule 57 (factor -> atom .)
    <               reduce using rule 57 (factor -> atom .)
    >               reduce using rule 57 (factor -> atom .)
    LESSEROREQUAL   reduce using rule 57 (factor -> atom .)
    GREATEROREQUAL  reduce using rule 57 (factor -> atom .)
    EQUALS          reduce using rule 57 (factor -> atom .)
    NOTEQUALS       reduce using rule 57 (factor -> atom .)
    ;               reduce using rule 57 (factor -> atom .)
    NEWLINE         reduce using rule 57 (factor -> atom .)
    :               reduce using rule 57 (factor -> atom .)
    )               reduce using rule 57 (factor -> atom .)


state 29

    (58) factor -> ( . atom_expr )
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE

    (               shift and go to state 29
    INTEGER         shift and go to state 21
    NAME            shift and go to state 36
    TRUE            shift and go to state 30
    FALSE           shift and go to state 31

    atom_expr                      shift and go to state 55
    term                           shift and go to state 26
    factor                         shift and go to state 27
    atom                           shift and go to state 28

state 30

    (61) atom -> TRUE .

    *               reduce using rule 61 (atom -> TRUE .)
    /               reduce using rule 61 (atom -> TRUE .)
    %               reduce using rule 61 (atom -> TRUE .)
    +               reduce using rule 61 (atom -> TRUE .)
    -               reduce using rule 61 (atom -> TRUE .)
    <               reduce using rule 61 (atom -> TRUE .)
    >               reduce using rule 61 (atom -> TRUE .)
    LESSEROREQUAL   reduce using rule 61 (atom -> TRUE .)
    GREATEROREQUAL  reduce using rule 61 (atom -> TRUE .)
    EQUALS          reduce using rule 61 (atom -> TRUE .)
    NOTEQUALS       reduce using rule 61 (atom -> TRUE .)
    ;               reduce using rule 61 (atom -> TRUE .)
    NEWLINE         reduce using rule 61 (atom -> TRUE .)
    :               reduce using rule 61 (atom -> TRUE .)
    )               reduce using rule 61 (atom -> TRUE .)


state 31

    (62) atom -> FALSE .

    *               reduce using rule 62 (atom -> FALSE .)
    /               reduce using rule 62 (atom -> FALSE .)
    %               reduce using rule 62 (atom -> FALSE .)
    +               reduce using rule 62 (atom -> FALSE .)
    -               reduce using rule 62 (atom -> FALSE .)
    <               reduce using rule 62 (atom -> FALSE .)
    >               reduce using rule 62 (atom -> FALSE .)
    LESSEROREQUAL   reduce using rule 62 (atom -> FALSE .)
    GREATEROREQUAL  reduce using rule 62 (atom -> FALSE .)
    EQUALS          reduce using rule 62 (atom -> FALSE .)
    NOTEQUALS       reduce using rule 62 (atom -> FALSE .)
    ;               reduce using rule 62 (atom -> FALSE .)
    NEWLINE         reduce using rule 62 (atom -> FALSE .)
    :               reduce using rule 62 (atom -> FALSE .)
    )               reduce using rule 62 (atom -> FALSE .)


state 32

    (2) file_inputs -> file_input file_inputs .

    $end            reduce using rule 2 (file_inputs -> file_input file_inputs .)


state 33

    (7) simple_stmt -> atom_chain_stmt NEWLINE .

    NEWLINE         reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    IF              reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    WHILE           reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    PRINT           reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    SCAN            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    BREAK           reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    CONTINUE        reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    NAME            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    (               reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    INTEGER         reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    TRUE            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    FALSE           reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    $end            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    ELSE            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    ELIF            reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)
    DEDENT          reduce using rule 7 (simple_stmt -> atom_chain_stmt NEWLINE .)


state 34

    (11) atom_chain_stmt -> atom_stmt ; .
    (12) atom_chain_stmt -> atom_stmt ; . atom_chain_stmt
    (10) atom_chain_stmt -> . atom_stmt
    (11) atom_chain_stmt -> . atom_stmt ;
    (12) atom_chain_stmt -> . atom_stmt ; atom_chain_stmt
    (13) atom_stmt -> . expr_stmt
    (14) atom_stmt -> . print_stmt
    (15) atom_stmt -> . scan_stmt
    (16) atom_stmt -> . flow_stmt
    (17) expr_stmt -> . assign_expr
    (18) expr_stmt -> . value_expr
    (19) print_stmt -> . PRINT CHAR NAME
    (20) print_stmt -> . PRINT CHAR INTEGER
    (21) print_stmt -> . PRINT CHAR STRING
    (22) print_stmt -> . PRINT INT NAME
    (23) print_stmt -> . PRINT INT INTEGER
    (24) print_stmt -> . PRINT INT STRING
    (25) scan_stmt -> . SCAN CHAR NAME
    (26) scan_stmt -> . SCAN INT NAME
    (27) flow_stmt -> . BREAK
    (28) flow_stmt -> . CONTINUE
    (40) assign_expr -> . NAME = value_expr
    (41) assign_expr -> . NAME = STRING
    (42) value_expr -> . atom_expr
    (43) value_expr -> . atom_expr compare_op value_expr
    (50) atom_expr -> . term
    (51) atom_expr -> . term + atom_expr
    (52) atom_expr -> . term - atom_expr
    (53) term -> . factor
    (54) term -> . factor * term
    (55) term -> . factor / term
    (56) term -> . factor % term
    (57) factor -> . atom
    (58) factor -> . ( atom_expr )
    (59) atom -> . INTEGER
    (60) atom -> . NAME
    (61) atom -> . TRUE
    (62) atom -> . FALSE
